Added actionbar navigation drawer

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light" >
+        android:theme="@style/Theme.AppCompat.Light" >
         <activity
             android:name="com.macleod2486.utnow.MainActivity"
             android:configChanges="screenSize|orientation"
