--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,20 +13,26 @@
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light" >
+        android:theme="@style/UTTheme" >
+        
         <activity
             android:name="com.macleod2486.utnow.MainActivity"
             android:configChanges="screenSize|orientation"
             android:label="@string/app_name" >
+            
             <intent-filter>
+                
                 <action android:name="android.intent.action.MAIN" />
 				
                 <category android:name="android.intent.category.LAUNCHER" />
+                
             </intent-filter>
+            
         </activity>
         
         <activity
@@ -39,9 +45,11 @@
         <meta-data
         android:name="com.google.android.gms.version"
         android:value="@integer/google_play_services_version" />
+        
         <meta-data 
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDxEpmbhqx7pWhOGYyxhU1AYYsbCK7rkXs"/>
+        
     </application>
 
 </manifest>
