Corrected service usage and added service stoppage

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,7 +56,7 @@
             android:enabled="true"
         />
             
-        <receiver android:name="BroadcastNews"/>
+        <receiver android:name="UTBroadcast"/>
         
         
     </application>
