--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity
             android:name="com.macleod2486.utnow.MainActivity"
             android:configChanges="screenSize|orientation"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
             
             <intent-filter>
                 
