--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,8 +24,7 @@
         <activity
             android:name="com.macleod2486.utnow.MainActivity"
             android:configChanges="screenSize|orientation"
-            android:label="@string/app_name"
-            android:launchMode="singleTop" >
+            android:label="@string/app_name">
             
             <intent-filter>
                 
@@ -63,7 +62,6 @@
                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             </intent-filter>
         </receiver>
-        
         
     </application>
 
